# AhorrApp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TESTING_OPTIMIZATION.md  create_products_table.sql  local.properties.example  session-ses_4f25_SESION_CON_GROK-CODE FAST1_V1.1_AHORRAPP.md  session-ses_4ff8.md  settings.gradle.kts  supabase_setup.md  supabase_user_analytics_schema.sql  walkthrough.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/debug/: output-metadata.json
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/d4vram/ahorrapp/: ExampleInstrumentedTest.kt  ProfileScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/d4vram/ahorrapp/: MainActivity.kt  TpvApp.kt
app/src/main/java/com/d4vram/ahorrapp/data/: ApiService.kt  AppDatabase.kt  OpenFoodApiService.kt  OpenFoodProductResponse.kt  PriceDao.kt  PriceEntryEntity.kt  PricePayload.kt  ProductDao.kt  ProductEntity.kt  ProductInfo.kt  Repository.kt  SecureKeys.kt
app/src/main/res/drawable/: ic_error_404.xml  ic_github.xml
app/src/main/res/mipmap-anydpi-v26/: ic_ahorrapp.xml  ic_ahorrapp_round.xml
app/src/main/res/values/: ic_ahorrapp_background.xml  strings.xml
app/src/test/java/com/d4vram/ahorrapp/: ExampleUnitTest.kt
docs/: index.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+22 files in other folders)
